Fix z-index of the top navbar

--- a/internal/static/css/twtxt.css
+++ b/internal/static/css/twtxt.css
@@ -16,6 +16,10 @@ article hgroup footer {
     height:0;
 }
 
+.nav {
+    z-index: 1050;
+}
+
 #uploadForm {
     display: inline;
 }
